kustomize-hawkbit/hawkbit-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hawkbit
spec:
  replicas: 1
  selector:
    matchLabels:
       app: hawkbit
  template:
    metadata:
      labels:
        app: hawkbit
    spec:
      containers:
      - args:
        - --hawkbit.server.ddi.security.authentication.anonymous.enabled=true
        image: hawkbit/hawkbit-update-server:latest-mysql
        name: hawkbit
        ports:
        - containerPort: 8080
        resources: {}
      restartPolicy: Always
