kustomize-hawkbit/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
spec:
  replicas: 1
  template:
    spec:
      containers:
      - env:
        - name: MYSQL_ALLOW_EMPTY_PASSWORD
          value: "true"
        - name: MYSQL_DATABASE
          value: hawkbit
        - name: MYSQL_USER
          value: root
        image: mysql:latest
        name: mysql
        ports:
        - containerPort: 3306
        resources: {}
      restartPolicy: Always
      volumes: null
