kustomize-hawkbit/hawkbit-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hawkbit
spec:
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
  selector:
    app: hawkbit
