kustomize-hawkbit/hawkbit-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hawkbit-ingress
spec:
  backend:
    serviceName: hawkbit
    servicePort: 8080
